--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -160,7 +160,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="2c1-7d-Vfp" customClass="GalleryCollectionViewCell">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EMBSPCell" id="2c1-7d-Vfp" customClass="EMBSPCell">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -195,87 +195,116 @@
                                     <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                                 </variation>
                             </collectionView>
-                            <button opaque="NO" tag="110" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-fL-O8K">
-                                <rect key="frame" x="709" y="713" width="66" height="33"/>
-                                <state key="normal" backgroundImage="share_but_pdf.png">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ES-9P-SOc">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <button opaque="NO" tag="110" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-fL-O8K">
+                                        <rect key="frame" x="709" y="713" width="66" height="33"/>
+                                        <state key="normal" backgroundImage="share_but_pdf.png">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted" backgroundImage="share_but_pdf_roll.png"/>
+                                        <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                            <rect key="frame" x="697" y="53" width="66" height="33"/>
+                                        </variation>
+                                        <connections>
+                                            <action selector="finishedSelectingItemsForEmail:" destination="CeG-kc-ZJW" eventType="touchUpInside" id="eVh-U8-FqI"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="111" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rio-YF-3np">
+                                        <rect key="frame" x="801" y="713" width="66" height="32"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" backgroundImage="share_but_email.png">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted" backgroundImage="share_but_email_roll.png"/>
+                                        <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                            <rect key="frame" x="789" y="53" width="66" height="32"/>
+                                        </variation>
+                                        <connections>
+                                            <action selector="finishedSelectingItemsForEmail:" destination="CeG-kc-ZJW" eventType="touchUpInside" id="RAU-ZQ-h28"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G76-Dd-JV9">
+                                        <rect key="frame" x="880" y="718" width="128" height="21"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="12"/>
+                                        <state key="normal" title="Send Blank Email">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                            <rect key="frame" x="868" y="58" width="128" height="21"/>
+                                        </variation>
+                                        <connections>
+                                            <action selector="sendBlankEmail" destination="CeG-kc-ZJW" eventType="touchUpInside" id="efW-Za-HZa"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10MBs" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJm-Df-bBb">
+                                        <rect key="frame" x="327" y="708" width="123" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                            <rect key="frame" x="315" y="48" width="123" height="21"/>
+                                        </variation>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zms-Jx-ytQ">
+                                        <rect key="frame" x="20" y="708" width="143" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                            <rect key="frame" x="8" y="48" width="143" height="21"/>
+                                        </variation>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <variation key="default">
+                                    <mask key="subviews">
+                                        <exclude reference="fKE-fL-O8K"/>
+                                        <exclude reference="rio-YF-3np"/>
+                                        <exclude reference="G76-Dd-JV9"/>
+                                        <exclude reference="CJm-Df-bBb"/>
+                                        <exclude reference="zms-Jx-ytQ"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="662" width="1024" height="106"/>
+                                    <mask key="subviews">
+                                        <include reference="fKE-fL-O8K"/>
+                                        <include reference="rio-YF-3np"/>
+                                        <include reference="G76-Dd-JV9"/>
+                                        <include reference="CJm-Df-bBb"/>
+                                        <include reference="zms-Jx-ytQ"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kir-5o-03v">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="highlighted" backgroundImage="share_but_pdf_roll.png"/>
                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="699" y="717" width="66" height="33"/>
+                                    <rect key="frame" x="881" y="20" width="87" height="30"/>
                                 </variation>
-                                <connections>
-                                    <action selector="finishedSelectingItemsForEmail:" destination="CeG-kc-ZJW" eventType="touchUpInside" id="eVh-U8-FqI"/>
-                                </connections>
                             </button>
-                            <button opaque="NO" tag="111" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rio-YF-3np">
-                                <rect key="frame" x="801" y="713" width="66" height="32"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" backgroundImage="share_but_email.png">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted" backgroundImage="share_but_email_roll.png"/>
-                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="791" y="717" width="66" height="32"/>
-                                </variation>
-                                <connections>
-                                    <action selector="finishedSelectingItemsForEmail:" destination="CeG-kc-ZJW" eventType="touchUpInside" id="RAU-ZQ-h28"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G76-Dd-JV9">
-                                <rect key="frame" x="880" y="718" width="128" height="21"/>
-                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="12"/>
-                                <state key="normal" title="Send Blank Email">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="870" y="722" width="128" height="21"/>
-                                </variation>
-                                <connections>
-                                    <action selector="sendBlankEmail" destination="CeG-kc-ZJW" eventType="touchUpInside" id="efW-Za-HZa"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10MBs" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJm-Df-bBb">
-                                <rect key="frame" x="327" y="708" width="123" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="317" y="712" width="123" height="21"/>
-                                </variation>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zms-Jx-ytQ">
-                                <rect key="frame" x="20" y="708" width="143" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="10" y="712" width="143" height="21"/>
-                                </variation>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="EZb-sG-4uK"/>
-                                <exclude reference="fKE-fL-O8K"/>
-                                <exclude reference="rio-YF-3np"/>
-                                <exclude reference="G76-Dd-JV9"/>
-                                <exclude reference="CJm-Df-bBb"/>
-                                <exclude reference="zms-Jx-ytQ"/>
+                                <exclude reference="3ES-9P-SOc"/>
+                                <exclude reference="Kir-5o-03v"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
                             <mask key="subviews">
                                 <include reference="EZb-sG-4uK"/>
-                                <include reference="fKE-fL-O8K"/>
-                                <include reference="rio-YF-3np"/>
-                                <include reference="G76-Dd-JV9"/>
-                                <include reference="CJm-Df-bBb"/>
-                                <include reference="zms-Jx-ytQ"/>
+                                <include reference="3ES-9P-SOc"/>
+                                <include reference="Kir-5o-03v"/>
                             </mask>
                         </variation>
                     </view>
@@ -284,8 +313,10 @@
                     <connections>
                         <outlet property="uib_Email" destination="rio-YF-3np" id="cNK-2i-KXB"/>
                         <outlet property="uib_PDF" destination="fKE-fL-O8K" id="2Ie-jS-4mT"/>
+                        <outlet property="uib_shareSwitch" destination="Kir-5o-03v" id="klW-m5-TRR"/>
                         <outlet property="uic_collectionView" destination="EZb-sG-4uK" id="IS1-9A-sSo"/>
                         <outlet property="uil_totalSize" destination="zms-Jx-ytQ" id="hYQ-ND-kZd"/>
+                        <outlet property="uiv_sharePanel" destination="3ES-9P-SOc" id="4Ny-kR-2cX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kQy-23-0Ue" userLabel="First Responder" sceneMemberID="firstResponder"/>
